force-app/main/default/objects/VisualAntidote__Formstack_User_License__c/VisualAntidote__Formstack_User_License__c.object-meta.xml
<CustomObject>
    <label>Formstack User License</label>
    <nameField>
        <displayFormat>FUL-{0000}</displayFormat>
        <label>Formstack User License	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formstack User Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>