force-app/main/default/objects/VisualAntidote__Formstack_User_License__c/fields/VisualAntidote__One_Primary_User__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__One_Primary_User__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Only one Formstack User License may have Type = Primary</description>
    <label>One Primary User</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>