force-app/main/default/objects/VisualAntidote__Formstack_User_License__c/fields/VisualAntidote__Type__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>