force-app/main/default/objects/VisualAntidote__Formstack_User_License__c/fields/VisualAntidote__User__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Formstack_User_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>