force-app/main/default/objects/VisualAntidote__Formstack_User_License__c/fields/VisualAntidote__User_Is_Unique__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__User_Is_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A User may only have one Formstack User License</description>
    <label>User Is Unique</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>