force-app/main/default/objects/VisualAntidote__Formstack_User_License__c/listViews/VisualAntidote__All.listView-meta.xml
<ListView>
    <fullName>VisualAntidote__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>